12-ExternalDNS-for-AzureDNS-on-AKS/kube-manifests/02-NginxApp1/01-NginxApp1-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: mmravi99/helloworld02:2
          ports:
            - containerPort: 8080
